--- a/ui/PF2_Activity.glade
+++ b/ui/PF2_Activity.glade
@@ -119,11 +119,14 @@
               <object class="GtkEventBox" id="PF2_preview_eventbox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="halign">center</property>
+                <property name="valign">center</property>
                 <child>
                   <object class="GtkImage" id="PF2_preview">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="hexpand">True</property>
+                    <property name="halign">center</property>
+                    <property name="valign">center</property>
                     <property name="pixbuf">logo.png</property>
                   </object>
                 </child>
